# home_voicevox_ros2

./: .pre-commit-config.yaml  package.xml  setup.py
.github/workflows/: test.yml
launch/: voicevox.launch.py
test/: test.bash
voicevox_ros2/: voicevox_node.py
