<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>voicevox_ros2</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="rione.home@gmail.com">Ri-one</maintainer>
  <license>LGPL-3.0</license>

  <depend>rclpy</depend>
  <depend>rione_interfaces</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
